App prop updated for Service Discovery

--- a/LoanService/src/main/resources/application.properties
+++ b/LoanService/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+#below prop req if we use feign in loan service
+eureka.client.fetch-registry=false 
