--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=user-service
+spring.application.name=userservice
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/userdb
 spring.datasource.username=root
@@ -6,5 +6,5 @@ spring.datasource.password=Boss@8055
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
